--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fontspider-helper",
+  "name": "fontspider-scaffold",
   "version": "1.0.0",
   "author": "Soha Jin <soha@lohu.info>",
   "license": "MIT",
